@@ -1,3 +1,4 @@
+* Allow to pass many configuration files
 * Remove translate on field name of User
 * Allow to define the default mode in calendar view
 * Use 'default_rec_name' context key in Model.default_get
